--- a/esp32_Laser/data/index.html
+++ b/esp32_Laser/data/index.html
@@ -44,6 +44,20 @@
             </label>
             <p class="state">State: <span id="12s"></span></p>
         </div>
+        <div class="card">
+            <p class="card-title"> Fader 1</p>
+            <p class="sl_switch">
+                <input type="range" onchange="updateSliderPWM(this)" id="slider1" min="0" max="100" step="1" value ="0" class="sl_slider">
+            </p>
+            <p class="state">Brightness: <span id="sliderValue2"></span> &percnt;</p>
+        </div>
+        <div class="card">
+            <p class="card-title"> Fader 2</p>
+            <p class="sl_switch">
+                <input type="range" onchange="updateSliderPWM(this)" id="slider2" min="0" max="100" step="1" value ="0" class="sl_slider">
+            </p>
+            <p class="state">Brightness: <span id="sliderValue3"></span> &percnt;</p>
+        </div>
     </div>
 </div>
 <script src="/script.js"></script>
