--- a/bird_wifi/data/index.html
+++ b/bird_wifi/data/index.html
@@ -16,7 +16,7 @@
             <p class="card-title"><i class="fas fa-lightbulb"></i> GPIO 22</p>
             <label class="switch">
                 <input type="checkbox" onchange="toggleCheckbox(this)" id="22">
-                <span class="slider"></span>
+                <span class="tg_slider"></span>
             </label>
             <p class ="state">State: <span id="2s"></span></p>
         </div>
@@ -24,7 +24,7 @@
             <p class="card-title"><i class="fas fa-lightbulb"></i> GPIO 4</p>
             <label class="switch">
                 <input type="checkbox" onchange="toggleCheckbox(this)" id="4">
-                <span class="slider"></span>
+                <span class="tg_slider"></span>
             </label>
             <p class ="state">State: <span id="4s"></span></p>
         </div>
@@ -32,7 +32,7 @@
             <p class="card-title"><i class="fas fa-lightbulb"></i> GPIO 14</p>
             <label class="switch">
                 <input type="checkbox" onchange="toggleCheckbox(this)" id="14">
-                <span class="slider"></span>
+                <span class="tg_slider"></span>
             </label>
             <p class ="state">State: <span id="14s"></span></p>
         </div>
@@ -40,7 +40,7 @@
             <p class="card-title"><i class="fas fa-lightbulb"></i> GPIO 12</p>
             <label class="switch">
                 <input type="checkbox" onchange="toggleCheckbox(this)" id="12">
-                <span class="slider"></span>
+                <span class="tg_slider"></span>
             </label>
             <p class="state">State: <span id="12s"></span></p>
         </div>
