--- a/esp32_Laser/data/index.html
+++ b/esp32_Laser/data/index.html
@@ -1,67 +1,76 @@
-<!DOCTYPE HTML><html>
+<!-- Complete project details: https://randomnerdtutorials.com/esp32-web-server-websocket-sliders/ -->
+
+<!DOCTYPE html>
+<html>
 <head>
-  <title>ESP IOT DASHBOARD</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="icon"  type="image/png" href="favicon.png">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <title>ESP IOT DASHBOARD</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div class="topnav">
-    <h1>ESP WEB SERVER - Control Multiple Outputs WebSocket</h1>
-  </div>
-  <div class="content">
-    <div class="card-grid">
-        <div class="card">             
-            <p class="card-title"><i class="fas fa-lightbulb"></i> GPIO 22</p>
-            <label class="switch">
-                <input type="checkbox" onchange="toggleCheckbox(this)" id="22">
-                <span class="slider"></span>
-            </label>
-            <p class ="state">State: <span id="2s"></span></p>
+    <div class="topnav">
+        <h1>Multiple Sliders</h1>
+    </div>
+    <div class="content">
+        <div class="card-grid">
+            <div class="card">
+                <p class="card-title">Fader 1</p>
+                <p class="sl_switch">
+                    <input type="range" onchange="updateSliderPWM(this)" id="slider1" min="0" max="100" step="1" value ="0" class="slider">
+                </p>
+                <p class="state">Brightness: <span id="sliderValue1"></span> &percnt;</p>
+            </div>
+            <div class="card">
+                <p class="card-title"> Fader 2</p>
+                <p class="sl_switch">
+                    <input type="range" onchange="updateSliderPWM(this)" id="slider2" min="0" max="100" step="1" value ="0" class="slider">
+                </p>
+                <p class="state">Brightness: <span id="sliderValue2"></span> &percnt;</p>
+            </div>
+            <div class="card">
+                <p class="card-title"> Fader 3</p>
+                <p class="sl_switch">
+                    <input type="range" onchange="updateSliderPWM(this)" id="slider3" min="0" max="100" step="1" value ="0" class="slider">
+                </p>
+                <p class="state">Brightness: <span id="sliderValue3"></span> &percnt;</p>
+            </div>
         </div>
-        <div class="card">
-            <p class="card-title"><i class="fas fa-lightbulb"></i> GPIO 4</p>
-            <label class="switch">
-                <input type="checkbox" onchange="toggleCheckbox(this)" id="4">
-                <span class="slider"></span>
-            </label>
-            <p class ="state">State: <span id="4s"></span></p>
-        </div>
-        <div class="card">
-            <p class="card-title"><i class="fas fa-lightbulb"></i> GPIO 14</p>
-            <label class="switch">
-                <input type="checkbox" onchange="toggleCheckbox(this)" id="14">
-                <span class="slider"></span>
-            </label>
-            <p class ="state">State: <span id="14s"></span></p>
-        </div>
-        <div class="card">
-            <p class="card-title"><i class="fas fa-lightbulb"></i> GPIO 12</p>
-            <label class="switch">
-                <input type="checkbox" onchange="toggleCheckbox(this)" id="12">
-                <span class="slider"></span>
-            </label>
-            <p class="state">State: <span id="12s"></span></p>
-        </div>
-        <div class="card">
-            <p class="card-title"> Fader 1</p>
-            <p class="sl_switch">
-                <input type="range" onchange="updateSliderPWM(this)" id="slider1" min="0" max="100" step="1" value ="0" class="sl_slider">
-            </p>
-            <p class="state">Brightness: <span id="sliderValue2"></span> &percnt;</p>
-        </div>
-        <div class="card">
-            <p class="card-title"> Fader 2</p>
-            <p class="sl_switch">
-                <input type="range" onchange="updateSliderPWM(this)" id="slider2" min="0" max="100" step="1" value ="0" class="sl_slider">
-            </p>
-            <p class="state">Brightness: <span id="sliderValue3"></span> &percnt;</p>
+        <div class="card-grid">
+            <div class="card">             
+                <p class="card-title"><i class="fas fa-lightbulb"></i> GPIO 22</p>
+                <label class="switch">
+                    <input type="checkbox" onchange="toggleCheckbox(this)" id="22">
+                    <span class="tg_slider"></span>
+                </label>
+                <p class ="state">State: <span id="2s"></span></p>
+            </div>
+            <div class="card">
+                <p class="card-title"><i class="fas fa-lightbulb"></i> GPIO 4</p>
+                <label class="switch">
+                    <input type="checkbox" onchange="toggleCheckbox(this)" id="4">
+                    <span class="tg_slider"></span>
+                </label>
+                <p class ="state">State: <span id="4s"></span></p>
+            </div>
+            <div class="card">
+                <p class="card-title"><i class="fas fa-lightbulb"></i> GPIO 14</p>
+                <label class="switch">
+                    <input type="checkbox" onchange="toggleCheckbox(this)" id="14">
+                    <span class="tg_slider"></span>
+                </label>
+                <p class ="state">State: <span id="14s"></span></p>
+            </div>
+            <div class="card">
+                <p class="card-title"><i class="fas fa-lightbulb"></i> GPIO 12</p>
+                <label class="switch">
+                    <input type="checkbox" onchange="toggleCheckbox(this)" id="12">
+                    <span class="tg_slider"></span>
+                </label>
+                <p class="state">State: <span id="12s"></span></p>
+            </div>
         </div>
     </div>
-</div>
-<script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
-
-
